<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topPanelList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#8AB3D3">

        <ImageView
            android:layout_width="77dp"
            android:layout_height="72dp"
            android:src="@drawable/icone_app" />

        <TextView
            android:id="@+id/txttitulolist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearance"
            android:textSize="30dp"
            android:text="@string/listagem_de_usuarios" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topPanelList"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topPanelList"
            android:paddingEnd="10dp"
            android:textAppearance="?android:attr/textAppearance"
            android:text="@string/registros"
            android:textSize="20dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtnomelist1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutstatus"
        android:paddingTop="15dp"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/nomeList"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/txtnomelist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtnomelist1"
        android:paddingTop="5dp"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/nomeList1"
        android:textColor="#DD2C00"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/txtenderecolist1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtnomelist"
        android:paddingTop="15dp"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/enderecoList"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/txtenderecolist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtenderecolist1"
        android:paddingTop="5dp"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/enderecoList1"
        android:textColor="#DD2C00"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/txttelefonelist1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtenderecolist"
        android:paddingTop="15dp"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/telefoneList"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/txttelefonelist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txttelefonelist1"
        android:paddingTop="5dp"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/telefoneList1"
        android:textColor="#DD2C00"
        android:textSize="16dp"/>

    <LinearLayout
        android:id="@+id/layout_botoes_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txttelefonelist"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/btanterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anterior"
            android:backgroundTint="#437297"/>

        <Button
            android:id="@+id/btproximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/proximo"
            android:backgroundTint="#437297"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_botao_fechar"
        android:layout_below="@id/layout_botoes_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btfechar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechar"
            android:backgroundTint="#437297"/>
    </LinearLayout>

</RelativeLayout>